--- a/zebra-rpc/Cargo.toml
+++ b/zebra-rpc/Cargo.toml
@@ -65,7 +65,7 @@ rand = { workspace = true }
 color-eyre = { workspace = true }
 
 tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros", "tracing"] }
-tower = { workspace = true }
+tower = { workspace = true, features = ["limit"] }
 
 # gRPC server dependencies
 tonic = { workspace = true }
